 - Qt: Fix gamepad event dispatching (fixes mgba.io/i/1922)
 - Qt: Pre-attach GDB stub when launching with -g (fixes mgba.io/i/1950)
 - SM83: Simplify register pair access on big endian
 - SM83: Disassemble STOP as one byte
 - Wii: Fix crash on unloading irregularly sized GBA ROMs
Misc:
 - 3DS: Use "wide mode" where applicable for slightly better filtering
 - Core: Add savedataUpdated callback
 - Core: Add shutdown callback
 - Core: Rework thread state synchronization
 - GB: Allow pausing event loop while CPU is blocked
 - GB: Add support for sleep and shutdown callbacks
 - GB I/O: Implement preliminary support for PCM12/PCM34 (closes mgba.io/i/1468)
 - GBA: Allow pausing event loop while CPU is blocked
 - GBA BIOS: Division by zero should emit a FATAL error
 - GBA Video: Convert OpenGL VRAM texture to integer
 - GBA Video: Skip attempting to render offscreen sprites in OpenGL
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - mGUI: Show battery percentage
 - mGUI: Skip second scan loop when possible
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Memory viewer now supports editing decimal values directly (closes mgba.io/i/1705)
 - Qt: Add copy button to GB printer dialog
 - Qt: Window title updates can be disabled (closes mgba.io/i/1912)
 - Qt: Redo OpenGL context thread handling (fixes mgba.io/i/1724)
 - Util: Reset vector size on deinit
 - VFS: Change semantics of VFile.sync on mapped files (fixes mgba.io/i/1730)

0.8.4: (2020-10-29)
Emulation fixes:
 - GB Audio: Fix initial sweep state
 - GB Audio: Fix deserializing audio channels 2 and 3
 - GB Audio: Fix deserializing while audio was disabled (fixes mgba.io/i/1305)
 - GB Video: Fix drawing background when window is force-disabled by frontend
 - GB, GBA Video: Copy disable flags when drawing scanlines in proxy when not blocking